--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT=5000
 MONGO_URI=mongodb+srv://mishrapiyush1114:0Y9srE2Bcu582OFJ@cluster0.s1uu9by.mongodb.net/test?retryWrites=true&w=majority
+# MONGO_URI=mongodb+srv://rittima30iem:1xXWtaj88fDjHwxE@website.bh1gvn2.mongodb.net/?retryWrites=true&w=majority&appName=website
 JWT_SECRET=yourSecretKey
 CLOUDINARY_NAME=dtmunbr0c
 CLOUDINARY_KEY=393777611495658
